Fixed naming issues

--- a/playRound.html
+++ b/playRound.html
@@ -39,7 +39,7 @@
         $("#cancelRoundButton").on("click", function () {
           var result = confirm("Haluatko varmasti peruuttaa kierroksen?");
           if (result) {
-            window.location.href = "startRound.html";
+            window.location.href = "index.html";
           } else {
             console.log("Kierroksen peruutus peruttu.");
           }
