--- a/endRoundPage.html
+++ b/endRoundPage.html
@@ -22,7 +22,7 @@
     <script>
       $(document).ready(function () {
         $("#returnButton").click(function () {
-          window.location.href = "startRound.html";
+          window.location.href = "index.html";
         });
       });
     </script>
@@ -32,7 +32,7 @@
       <ul class="nav__links">
         <li class="head"><h1>Friba tuloskortti</h1></li>
         <li class="item">
-          <a href="startRound.html" id="startRound">Aloita kierros</a>
+          <a href="index.html" id="startRound">Aloita kierros</a>
         </li>
         <li class="item">
           <a href="savedRounds.html" id="savedRounds">Tallennetut kierrokset</a>
