--- a/savedRounds.html
+++ b/savedRounds.html
@@ -27,9 +27,7 @@
       <ul class="nav__links">
         <li class="head"><h1>Friba tuloskortti</h1></li>
         <li class="item">
-          <a class="navA" href="startRound.html" id="startRound"
-            >Aloita kierros</a
-          >
+          <a class="navA" href="index.html" id="startRound">Aloita kierros</a>
         </li>
         <li class="item">
           <a href="savedRounds.html" id="savedRounds">Tallennetut kierrokset</a>
