--- a/addplayer.html
+++ b/addplayer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Friba tuloskortti</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylesforaddplayer.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script type="module" src="main.js"></script>
     <script>
