--- a/addplayer.html
+++ b/addplayer.html
@@ -34,7 +34,7 @@
         document
           .getElementById("name")
           .addEventListener("keydown", function (event) {
-            // Check if the key pressed is Enter (key code 13)
+            // Check if the key pressed is Enter
             if (event.keyCode === 13) {
               // Trigger click on the "Lisää" button
               document.getElementById("addPlayerButton").click();
